==> zhanglei0/key_board_code/键盘透传/USB接口芯片CH374所有应用源码/USB接口芯片CH374所有应用源码/USB接口芯片CH374所有应用源码/CH374_code/CH374LIB/MSP430/LIBF/EXAM6/CH374HFT.C <==
#include <msp430x44x.h>
#include <stdio.h>
#include <string.h>
#define LIB_CFG_INT_EN			0		/* CH374的INT#引脚连接方式,0为"查询方式",1为"中断方式" */
#define	DISK_BASE_BUF_ADDR		0x0200	/* 外部RAM的磁盘数据缓冲区的起始地址,从该单元开始的缓冲区长度为SECTOR_SIZE */
#define CH374_INT_WIRE			( P1IN & 0x10 )	/* P1.4, CH374的中断线INT#引脚,连接CH374的INT#引脚,用于查询中断状态 */
#define NO_DEFAULT_CH374_F_ENUM		1		/* 未调用CH374FileEnumer程序故禁止以节约代码 */
#define NO_DEFAULT_CH374_F_QUERY	1		/* 未调用CH374FileQuery程序故禁止以节约代码 */
#define NO_DEFAULT_CH374_RESET		1		/* 未调用CH374Reset程序故禁止以节约代码 */
#include "..\CH374HFF.H"

void	mInitSTDIO( )
{
	UTCTL0 = SSEL1;                       // UCLK = SMCLK
	UBR00 = 0x41;                         // 7.99MHz 9600bps
	UBR10 = 0x03;                         // 7.99MHz 9600bps
	UMCTL0 = 0x00;                        // no modulation
	UCTL0 = CHAR;                         // 8-bit character *SWRST*
	ME1 |= UTXE0 + URXE0;                 // Enable USART0 TXD/RXD
	P2SEL |= 0x30;                        // P2.4,5 = USART0 TXD/RXD
	P2DIR |= 0x10;                        // P2.4 output direction
}
